force-app/main/default/objects/In_Village_Brand_Activity__c/In_Village_Brand_Activity__c.object-meta.xml
<CustomObject>
    <label>In Village Brand Activity</label>
    <nameField>
        <label>In Village Brand Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Village Brand Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>