force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field exists purely to provide a relationship between &quot;In_Village_Brand_Activity__c&quot; - Account  this allows the related In Village Brand Activity to be shown on the Account layout in a related list.
It is populated by a process builder workflow - &quot;In Village Brand Activity Set Brand__c&quot;, a process invoked by insert or update of an &quot;In_Village_Brand_Activity__c&quot; record.</description>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>In Village Brand Activities</relationshipLabel>
    <relationshipName>In_Village_Brand_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>