force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Brand_Activity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Activity</label>
    <referenceTo>Brand_Activity__c</referenceTo>
    <relationshipLabel>In Village Brand Activities</relationshipLabel>
    <relationshipName>In_Village_Brand_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>