force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Brand_Guest_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Brand_Guest_Relevance__c</fullName>
    <formula>Brand_Activity__r.Brand_Guest_Relevance__c</formula>
    <label>Brand Guest Relevance</label>
    <type>Text</type>
</CustomField>