force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Brand_Segment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Segment__c</fullName>
    <formula>Brand_Activity__r.Brand_Segment__c</formula>
    <label>Brand Segment</label>
    <type>Text</type>
</CustomField>