force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Brand_VR_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Brand_VR_Positioning__c</fullName>
    <formula>Brand_Activity__r.Brand_VR_Positioning__c</formula>
    <label>Brand VR Positioning</label>
    <type>Text</type>
</CustomField>