force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Details_Comments__c.field-meta.xml
<CustomField>
    <fullName>Details_Comments__c</fullName>
    <label>Details/Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>