force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Expected_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Expected_Footfall__c</fullName>
    <label>Expected Footfall</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>