force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Expected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales__c</fullName>
    <label>Expected Sales</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>