force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Group_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Group_Marketing__c</fullName>
    <formula>Brand_Activity__r.Group_Marketing__c</formula>
    <label>Group Marketing</label>
    <type>Checkbox</type>
</CustomField>