force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Legal_Mandatories_Other_Reference__c.field-meta.xml
<CustomField>
    <fullName>Legal_Mandatories_Other_Reference__c</fullName>
    <label>Legal Mandatories &amp; Other Reference</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>