force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Marketing_Activity_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Cost__c</fullName>
    <label>Marketing Activity Cost</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>