force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Measurement_Description__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Description__c</fullName>
    <label>Measurement Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>