force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>