force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Related_MA_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_MA_Count__c</fullName>
    <label>Related MA Count</label>
    <summaryForeignKey>Related_Marketing_Activity__c.In_Village_Brand_Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>