force-app/main/default/objects/In_Village_Brand_Activity__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Village Presence</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>In Village Brand Activities</relationshipLabel>
    <relationshipName>In_Village_Brand_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>