force-app/main/default/objects/In_Village_Brand_Activity__c/validationRules/No_More_Than_1_Related_Activity_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>No_More_Than_1_Related_Activity_Record</fullName>
    <active>true</active>
    <errorConditionFormula>Related_MA_Count__c &gt; 1</errorConditionFormula>
    <errorMessage>No more than 1 Related Marketing Activity can be added or created.</errorMessage>
</ValidationRule>